# 2025-RMV-task3

./: README.md
task3_curve_fit/: CMakeLists.txt  ball_positions.csv  main.cpp
task3_find_position/: CMakeLists.txt  ball_positions.csv  main.cpp
